--- a/style.css
+++ b/style.css
@@ -1,8 +1,11 @@
 html, body {
   margin: 0;
   padding: 0;
-  overflow: hidden;
 }
+
+body::-webkit-scrollbar{
+    display: none;
+  }
 
 canvas {
   display: block;
